# cli

./: .gitignore  .yamllint.yml  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  actions.yml  build.rs  flake.nix  metadata.cdx.json  rustfmt.toml  sbom.cyclonedx.json  sbom.spdx.json  signature.proto
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: CODEOWNERS  actions.yml  docker-image.yml  docs.yml  fmt.yml  lint.yml  nix.yml  release.yml  rust.yml  sbom.yml
data/: index.html
docs/: CommandLineHelp copy.md  CommandLineHelp.md  EdgeApps.md
docs/edge_apps/: CORS.md  Creating.md  EmulatorAndDebugging.md  GettingStarted.md  Gotchas.md  Manifest.md  Metadata.md  Monitoring.md  README.md  SettingsAndSecrets.md  Uploading.md  Versions.md  Workflow.md
sbom/: metadata.cdx.json.tmpl
schema/: screenly_yml_schema.json
scripts/: verify_screenly_yml.sh
src/: authentication.rs  cli.rs  commands.rs  main.rs  pb_signature.rs  signature.rs
src/api/: asset.rs  edge_app.rs  mod.rs  version.rs
src/api/edge_app/: app.rs  channel.rs  installation.rs  mod.rs  setting.rs  version.rs
src/commands/: asset.rs  edge_app.rs  edge_app_manifest.rs  edge_app_server.rs  edge_app_settings.rs  edge_app_utils.rs  ignorer.rs  instance_manifest.rs  manifest_auth.rs  mod.rs  playlist.rs  screen.rs  serde_utils.rs
src/commands/edge_app/: app.rs  instance.rs  instance_manifest.rs  manifest.rs  manifest_auth.rs  mod.rs  server.rs  setting.rs  test_utils.rs  utils.rs
src/mcp/: mod.rs  server.rs  tests.rs
src/mcp/tools/: asset.rs  asset_group.rs  edge_app.rs  label.rs  mod.rs  playlist.rs  playlist_item.rs  screen.rs  shared_playlist.rs
tmp/: index.html  screenly.yml
