[package]
name = "cli"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "screenly"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive", "cargo"] }
dirs = "4.0.0"
hex = "0.4.3"
http-auth-basic = "0.3.3"
indicatif = "0.17.2"
log = { version = "0.4.17", features = ["release_max_level_info", "max_level_debug"] }
openssl = { version = '0.10', features = ["vendored"] }
prettytable-rs = "0.10.0"
protobuf = "3.2.0"
reqwest = { version = "0.11.12", features = ["json", "blocking", "multipart"] }
rpassword = "7.2.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.17"
sha1 = "0.10.5"
sha2 = "0.10.7"
simple_logger = { version = "4.0.0", features= ["colors"]}
tempdir = "0.3.7"
term = "0.7.0"
thiserror = "1.0.37"
walkdir = "2.3.3"

[dev-dependencies]
httpmock = "0.6"
envtestkit = "1.1.2"
