[package]
name = "cli"
version = "0.2.5"
edition = "2021"

[[bin]]
name = "screenly"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive", "cargo"] }
dirs = "4.0.0"
hex = "0.4.3"
http-auth-basic = "0.3.3"
indicatif = "0.17.2"
log = { version = "0.4.17", features = ["release_max_level_info", "max_level_debug"] }
openssl = { version = '0.10', features = ["vendored"] }
prettytable-rs = "0.10.0"
protobuf = "3.3.0"
reqwest = { version = "0.11.12", features = ["json", "blocking", "multipart"] }
rpassword = "7.2.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.17"
sha1 = "0.10.5"
sha2 = "0.10.7"
simple_logger = { version = "4.0.0", features= ["colors"]}
strum = "0.25"
strum_macros = "0.25"
term = "0.7.0"
thiserror = "1.0.37"
sentry = "0.31.5"
sentry-anyhow = "0.31.5"
rayon = "1.7.0"
warp = "0.3.5"
tokio = "1.32.0"
tokio-stream = "0.1.14"
regex = "1.9.3"
walkdir = "2.3.3"
glob = "0.3.1"
futures = "0.3.28"

[dev-dependencies]
httpmock = "0.6"
envtestkit = "1.1.2"
tempfile = "3.8"
