[package]
name = "screenly"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "screenly"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive", "cargo"] }
clap-markdown = "0.1.4"
dirs = "6.0.0"
futures = "0.3.28"
glob = "0.3.1"
hex = "0.4.3"
http-auth-basic = "0.3.3"
indicatif = "0.18.0"
log = { version = "0.4.17", features = [
    "release_max_level_debug",
    "max_level_debug",
] }
openssl = { version = '0.10', features = ["vendored"] }
prettytable-rs = "0.10.0"
protobuf = "3.3.0"
rayon = "1.7.0"
regex = "1.9.3"
reqwest = { version = "0.12.22", features = ["json", "blocking", "multipart"] }
rpassword = "7.2.0"
sentry = "0.46"
sentry-anyhow = "0.46"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_with = "3.8.3"
serde_yaml = "0.9.17"
sha1 = "0.10.5"
sha2 = "0.10.7"
simple_logger = { version = "5", features = ["colors"] }
strum = "0.27"
strum_macros = "0.27"
temp-env = "0.3.6"
term = "1.1.0"
thiserror = "2.0.12"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
walkdir = "2.3.3"
warp = "0.3"

# MCP server dependencies
rmcp = { version = "0.12", features = ["schemars", "server", "transport-io"] }
schemars = "0.8"

[dev-dependencies]
envtestkit = "1.1.2"
httpmock = "0.8"
swc_common = { version = "18", default-features = false, features = [] }
swc_ecma_parser = { version = "32", default-features = false, features = ["typescript"] }
tempfile = "3.8"
